Agregado de link a mi portafolio de proyectos

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </main>
 
     <footer>
-        <p>© 2024 Mi Experiencia en Programación | 
-           <a href="https://github.com/tuusuario/mi-experiencia-programacion" target="_blank">Repositorio GitHub</a>
+        <p>Portafolio de proyectos que hice durante mi aprendizaje anterior que en realidad fue de mis primeras paginas web diseñadas por mi</p> 
+           <a href="https://velvett1521.github.io/Portafolio_De_Proyectos_CEDF/" target="_blank">Repositorio GitHub</a>
         </p>
     </footer>
 </body>
