cambios en index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li>Godot Engine - Desarrollo de videojuegos</li>
                 <li>Android Studio - Aplicaciones móviles</li>
             </ul>
-            <p>Visita mi <a href="https://github.com/tuusuario" target="_blank">GitHub</a> para ver mis proyectos.</p>
+            <p>Visita mi <a href="https://github.com/Velvett1521" target="_blank">GitHub</a> para ver mis proyectos.</p>
         </section>
 
         <section id="actual">
@@ -78,7 +78,7 @@
 
     <footer>
         <p>Portafolio de proyectos que hice durante mi aprendizaje anterior que en realidad fue de mis primeras paginas web diseñadas por mi</p> 
-           <a href="https://velvett1521.github.io/Portafolio_De_Proyectos_CEDF/" target="_blank">Repositorio GitHub</a>
+           <a href="https://velvett1521.github.io/Portafolio_De_Proyectos_CEDF/" target="_blank">Portafolio de Proyectos</a>
         </p>
     </footer>
 </body>
