--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Experiencia en Programación</title>
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        
+        nav a {
+            border-radius: 15px;
+        }
+        
+        input[type="submit"] {
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
