Ajuste del color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi Experiencia en Programación</title>
     <style>
         body {
-            background-color: #f5f5f5;
+            background-color: #bab0b0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         
